new-aws-web-tier/security_group.tf
resource "aws_security_group" "terraform_security_group" {
    name = "Allow_SSH_HTTP_HTTPS"
    description = "Allow using ssh,http,https"
    vpc_id = aws_vpc.terraform_vpc.id
    ingress {
      description      = "SSH"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
  }
    ingress {
      description = "HTTPS"
      from_port   = 443
      to_port     = 443
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
    ingress {
      description = "HTTP"
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
    egress {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
  }

    tags = {
      Name = "allow ssh,HTTP,HTTPS"
  }
  
}
